--- a/index.html
+++ b/index.html
@@ -90,22 +90,44 @@
             </div>
         </div>
         <div class="main-content">
-            <div class="projects-grid">
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-            </div>
-            <div class="extras-grid">
-                <div class="announcements">
-
+            <h3>Your projects</h3>
+            <div class="main-cards">
+                <div class="projects-grid">
+                    <div class="grid-item">
+                        <p class="card-title">Super Cool Project</p>
+                        <p class="card-content">Sed tempus ut lacus ut scelerisque. Suspendisse Sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    </div>
+                    <div class="grid-item">
+                        <p class="card-title">Less Cool Project</p>
+                        <p class="card-content">Nullam condimentum ipsum ut lectus vehicula consecteur. Quisque sed dolor tincidunt, consecteur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+                    </div>
+                    <div class="grid-item">
+                        <p class="card-title">Impossible App</p>
+                        <p class="card-content">In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit safgittis id.</p>
+                    </div>
+                    <div class="grid-item">
+                        <p class="card-title">Easy Peasy App</p>
+                        <p class="card-content">Sed tempus ut lacus ut scelerisque. Suspendisse Sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    </div>
+                    <div class="grid-item">
+                        <p class="card-title">Ad Blocker</p>
+                        <p class="card-content">Nullam condimentum ipsum ut lectus vehicula consecteur. Quisque sed dolor tincidunt, consecteur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+                    </div>
+                    <div class="grid-item">
+                        <p class="card-title">Money Maker</p>
+                        <p class="card-content">Nullam condimentum ipsum ut lectus vehicula consecteur. Quisque sed dolor tincidunt, consecteur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+                    </div>
                 </div>
-                <div class="trending">
+                <div class="extras-grid">
+                    <div class="announcements">
 
+                    </div>
+                    <div class="trending">
+
+                    </div>
                 </div>
             </div>
+            
         </div>
     </div>
 </body>
