--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="main-content">
-            <h2>Your projects</h2>
+            <h2 class="your-projects">Your projects</h2>
             <div class="main-cards">
                 <div class="projects-grid">
                     <div class="grid-item">
@@ -253,6 +253,7 @@
                             </svg>
                         </div>
                     </div>
+                    
                 </div>
                 <div class="extras-grid">
                     <div class="extras-card">
@@ -283,9 +284,25 @@
                         <h2>Trending</h2>
                         <div class="trending">
                             <div class="profile-icon"></div>
+                            <div class="trend-profiles">
+                                <p class="card-title">@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
                             <div class="profile-icon"></div>
+                            <div class="trend-profiles">
+                                <p class="card-title">@atremanti</p>
+                                <p>Super Cool Project</p>
+                            </div>
                             <div class="profile-icon"></div>
+                            <div class="trend-profiles">
+                                <p class="card-title">@kendall</p>
+                                <p>Life Changing App</p>
+                            </div>
                             <div class="profile-icon"></div>
+                            <div class="trend-profiles">
+                                <p class="card-title">Alex</p>
+                                <p>No Traffic Maker</p>
+                            </div>
                         </div>
                     </div>
                 </div>
